src/test/ui/regions/regions-ret-borrowed.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/regions-ret-borrowed.rs:13:14
   |
LL |     with(|o| o)
   |              ^
   |
note: first, the lifetime cannot outlive the anonymous lifetime #1 defined here...
  --> $DIR/regions-ret-borrowed.rs:13:10
   |
LL |     with(|o| o)
   |          ^^^^^
note: ...so that the types are compatible
  --> $DIR/regions-ret-borrowed.rs:13:14
   |
LL |     with(|o| o)
   |              ^
   = note: expected `&isize`
              found `&isize`
note: but, the lifetime must be valid for the lifetime `'a` as defined here...
  --> $DIR/regions-ret-borrowed.rs:12:14
   |
LL | fn return_it<'a>() -> &'a isize {
   |              ^^
note: ...so that reference does not outlive borrowed content
  --> $DIR/regions-ret-borrowed.rs:13:5
   |
LL |     with(|o| o)
   |     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
